[FIX] 데이터로더 전체 수정

--- a/test/datasets/esic.ipynb
+++ b/test/datasets/esic.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets import esic_v1"
+    "from sj_ai_utils.datasets.esic_v1 import ESICv1\n",
+    "from sj_ai_utils.datasets.esic_v1.service import load_data, load_data_v2, search_dirs"
    ]
   },
   {
@@ -27,7 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ESIC_PATH = \"/workspaces/dev/datasets/ESIC-v1.1/v1.1/test\""
+    "ESIC_PATH = \"/workspaces/dev/.datasets/ESIC-v1.1/v1.1/test\"\n",
+    "ESIC_PATH_V2 = \"/workspaces/dev/.datasets/ESIC-v1.1\""
    ]
   },
   {
@@ -37,7 +39,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "esic = Path(ESIC_PATH)"
+    "esic = Path(ESIC_PATH)\n",
+    "esic_v2 = Path(ESIC_PATH_V2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8603d3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esic = search_dirs(esic)\n",
+    "esic_v2 = ESICv1(esic_v2)"
    ]
   },
   {
@@ -47,7 +61,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = esic_v1.search_all_data(esic)"
+    "test = esic\n",
+    "test_v2 = esic_v2.test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98e34aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "835c8d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_v2[0]"
    ]
   },
   {
@@ -57,9 +92,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = result[0]\n",
-    "video = esic_v1.search_file_from_dir(d, \"mp4\")\n",
-    "txt = esic_v1.search_file_from_dir(d, \"o\")"
+    "id_set = set()\n",
+    "key_set = set()\n",
+    "for audio, _id, y, key in load_data(test, 16000):\n",
+    "    print(f\"{type(audio)} {len(audio)} | {_id} | {key} | {y[:30]}\")\n",
+    "    if key in key_set:\n",
+    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
+    "    key_set.add(key)\n",
+    "    if _id in id_set:\n",
+    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
+    "    id_set.add(_id)"
    ]
   },
   {
@@ -69,13 +111,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{video}\\n{txt}\")"
+    "id_set = set()\n",
+    "key_set = set()\n",
+    "for audio, _id, y, key in load_data_v2(test_v2, 16000):\n",
+    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
+    "    if key in key_set:\n",
+    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
+    "    key_set.add(key)\n",
+    "    if _id in id_set:\n",
+    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
+    "    id_set.add(_id)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
