--- a/test/datasets/libri.ipynb
+++ b/test/datasets/libri.ipynb
@@ -3,101 +3,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc0cf79",
+   "id": "083998cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Audio"
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bee70802",
+   "id": "0fee210d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face.ami import AMI\n",
-    "from sj_ai_utils.hugging_face.ami.service import load_data"
+    "from sj_ai_utils.datasets.libri_speech_asr_corpus import LibriSpeechASRCorpus\n",
+    "from sj_ai_utils.datasets.libri_speech_asr_corpus.service import load_data, search_dirs, load_data_v2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c071084",
+   "id": "bc8e7348",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ami = AMI()"
+    "LIBRI_PATH = \"/workspaces/dev/.datasets/LibriSpeechASRcorpus/test-other\"\n",
+    "LIBRI_PATH_V2 = \"/workspaces/dev/.datasets/LibriSpeechASRcorpus\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9d5339",
+   "id": "bb18bc14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ami.config_names"
+    "libri_path = Path(LIBRI_PATH)\n",
+    "libri_path_v2 = Path(LIBRI_PATH_V2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad05a6c",
+   "id": "339b9bd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ami.split_names()"
+    "libri = search_dirs(libri_path)\n",
+    "libri_v2 = LibriSpeechASRCorpus(libri_path_v2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0726a774",
+   "id": "42c1b691",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = ami.test()"
+    "test = libri\n",
+    "test_v2 = libri_v2.test_other()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e999b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(test), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d87225a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "106b4de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = test[index]\n",
-    "index += 1\n",
-    "print(d)\n",
-    "Audio(d[\"audio\"]['array'], rate=d['audio']['sampling_rate'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15aa54bc",
+   "id": "bccccf10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +81,26 @@
     "    key_set.add(key)\n",
     "    if _id in id_set:\n",
     "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+    "    id_set.add(_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9520d8f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_set = set()\n",
+    "key_set = set()\n",
+    "for audio, _id, y, key in load_data_v2(test_v2, 16000):\n",
+    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
+    "    if key in key_set:\n",
+    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
+    "    key_set.add(key)\n",
+    "    if _id in id_set:\n",
+    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
+    "    id_set.add(_id)"
    ]
   }
  ],
