--- a/test/datasets/tedlium.ipynb
+++ b/test/datasets/tedlium.ipynb
@@ -14,11 +14,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9978ecad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "00aab7d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face.tedlium import Tedlium"
+    "from sj_ai_utils.hugging_face.tedlium import Tedlium\n",
+    "from sj_ai_utils.hugging_face.tedlium.service import load_data"
    ]
   },
   {
@@ -58,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = tedlium.test(\"release2\")"
+    "test = tedlium.test(\"release2\")"
    ]
   },
   {
@@ -67,7 +78,53 @@
    "id": "856072fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type(test), len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bef1cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3da321e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = test[index]\n",
+    "index += 1\n",
+    "print(d)\n",
+    "Audio(d[\"audio\"]['array'], rate=d['audio']['sampling_rate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "591e4d97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_set = set()\n",
+    "key_set = set()\n",
+    "for audio, _id, y, key in load_data(test, 16000):\n",
+    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
+    "    if key in key_set:\n",
+    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
+    "    key_set.add(key)\n",
+    "    if _id in id_set:\n",
+    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
+    "    id_set.add(_id)\n",
+    "    if len(_id) > 255:\n",
+    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+   ]
   }
  ],
  "metadata": {
