--- a/test/datasets/vox_populi.ipynb
+++ b/test/datasets/vox_populi.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face.vox_populi import VoxPopuli"
+    "from sj_ai_utils.hugging_face.vox_populi import VoxPopuli\n",
+    "from sj_ai_utils.hugging_face.vox_populi.service import load_data"
    ]
   },
   {
@@ -38,17 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = vox_populi.test()"
+    "test = vox_populi.test()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b53cc8d",
+   "id": "078cd236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set.features"
+    "test[0]"
    ]
   },
   {
@@ -58,18 +59,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = test_set[0]['audio']['array']\n",
-    "y = test_set[0]['raw_text']\n",
-    "x, y"
+    "id_set = set()\n",
+    "key_set = set()\n",
+    "for audio, _id, y, key in load_data(test, 16000):\n",
+    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
+    "    if key in key_set:\n",
+    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
+    "    key_set.add(key)\n",
+    "    if _id in id_set:\n",
+    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
+    "    id_set.add(_id)\n",
+    "    if len(_id) > 255:\n",
+    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9259f18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
