[FIX] l_hotse load_data 함수 오류 수정

--- a/test/l_hotse/ami.ipynb
+++ b/test/l_hotse/ami.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -58,16 +59,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "idx = 0\n",
     "key_set = set()\n",
     "id_set = set()\n",
-    "for audio, _id, y, key in load_data(dev_set, 16000, 1):\n",
-    "    print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "for i, (audio, _id, y, key) in enumerate(load_data(dev_set, 16000)):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
     "    if _id in id_set:\n",
     "        raise ValueError(f\"Duplicate recording ID found: {_id}\")\n",
     "    if key in key_set:\n",
     "        raise ValueError(f\"Duplicate key found: {key}\")\n",
     "    id_set.add(_id)\n",
-    "    key_set.add(key)"
+    "    key_set.add(key)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57314568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a3e0cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(audio, rate=16000)"
    ]
   }
  ],
