[FEAT] zeroth_korean, ksponspeech

--- a/test/hugging_face/zeroth_korean.ipynb
+++ b/test/hugging_face/zeroth_korean.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cbc0cf79",
+   "execution_count": null,
+   "id": "8c2fc269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,58 +12,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bee70802",
+   "execution_count": null,
+   "id": "f25f3ead",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face import AMI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6c071084",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ami = AMI()"
+    "from sj_ai_utils.datasets.hugging_face import ZerothKorean"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9d5339",
+   "id": "e5aa8e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ami.config_names"
+    "zeroth_korean = ZerothKorean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad05a6c",
+   "id": "84805162",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ami.split_names()"
+    "zeroth_korean.config_names"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0726a774",
+   "id": "27d749d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = ami.test()"
+    "zeroth_korean.split_names()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e999b9a",
+   "id": "0e52aa06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = zeroth_korean.test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852db9a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d87225a",
+   "id": "c03bf8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,35 +83,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106b4de1",
+   "id": "d3ccf406",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = test[index]\n",
+    "_id, audio, txt = test[index]\n",
     "index += 1\n",
-    "print(d)\n",
-    "Audio(d[\"audio\"]['array'], rate=d['audio']['sampling_rate'])"
+    "print(_id, audio.shape, txt)\n",
+    "Audio(audio, rate=test.sample_rate)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15aa54bc",
+   "id": "84aa86ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data(test, 16000):\n",
-    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
+    "for _id, audio, text in test:\n",
+    "    print(f\"{type(audio)} | {_id} | {text[:30]}\")\n",
     "    if _id in id_set:\n",
     "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
     "    id_set.add(_id)\n",
     "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+    "        raise ValueError(f\"Key length exceeds 255 characters: {_id}\")"
    ]
   }
  ],
