[UPDATE]  데이터셋 로더 수정

--- a/test/datasets/esic.ipynb
+++ b/test/datasets/esic.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -17,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.datasets.esic_v1 import ESICv1\n",
-    "from sj_ai_utils.datasets.esic_v1.service import load_data, load_data_v2, search_dirs"
+    "from sj_ai_utils.datasets.esic_v1 import ESICv1"
    ]
   },
   {
@@ -28,19 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ESIC_PATH = \"/workspaces/dev/.datasets/ESIC-v1.1/v1.1/test\"\n",
-    "ESIC_PATH_V2 = \"/workspaces/dev/.datasets/ESIC-v1.1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1daf254b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "esic = Path(ESIC_PATH)\n",
-    "esic_v2 = Path(ESIC_PATH_V2)"
+    "ESIC_PATH = \"/workspaces/dev/.datasets/ESIC-v1.1\""
    ]
   },
   {
@@ -50,8 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "esic = search_dirs(esic)\n",
-    "esic_v2 = ESICv1(esic_v2)"
+    "esic = ESICv1(Path(ESIC_PATH))"
    ]
   },
   {
@@ -61,66 +48,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = esic\n",
-    "test_v2 = esic_v2.test()"
+    "dataset = esic.test()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e34aef",
+   "id": "1930bc0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "835c8d68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_v2[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3da819ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "idx = 2\n",
     "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data(test, 16000):\n",
-    "    print(f\"{type(audio)} {len(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)"
+    "for i, sample in enumerate(dataset):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74356c86",
+   "id": "290acfc4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data_v2(test_v2, 16000):\n",
-    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)"
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20f021ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab755bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -140,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
