--- a/test/hugging_face/ami.ipynb
+++ b/test/hugging_face/ami.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cbc0cf79",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bee70802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face import AMI"
+    "from sj_ai_utils.datasets.hugging_face import AMI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6c071084",
    "metadata": {},
    "outputs": [],
@@ -57,40 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = ami.test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e999b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(test), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d87225a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "106b4de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = test[index]\n",
-    "index += 1\n",
-    "print(d)\n",
-    "Audio(d[\"audio\"]['array'], rate=d['audio']['sampling_rate'])"
+    "dataset = ami.validation(task=(\"asr\", \"diarization\"))"
    ]
   },
   {
@@ -100,18 +67,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "idx = 10\n",
     "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data(test, 16000):\n",
-    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+    "for i, sample in enumerate(dataset):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc7a300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92d5ca00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "921169a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4865a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -131,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
