--- a/test/hugging_face/tedlium.ipynb
+++ b/test/hugging_face/tedlium.ipynb
@@ -28,8 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face.tedlium import Tedlium\n",
-    "from sj_ai_utils.hugging_face.tedlium.service import load_data"
+    "from sj_ai_utils.datasets.hugging_face.tedlium import Tedlium"
    ]
   },
   {
@@ -69,61 +68,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = tedlium.test(\"release2\")"
+    "test = tedlium.test(\"release2\", task=(\"asr\", \"diarization\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "856072fd",
+   "id": "13517eeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(test), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bef1cc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3da321e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = test[index]\n",
-    "index += 1\n",
-    "print(d)\n",
-    "Audio(d[\"audio\"]['array'], rate=d['audio']['sampling_rate'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "591e4d97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "idx = 10\n",
     "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data(test, 16000):\n",
-    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+    "for i, sample in enumerate(test):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017913dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7703cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "209d3b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b41e7c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -143,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
