--- a/test/l_hotse/ami.ipynb
+++ b/test/l_hotse/ami.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.l_hotse import AMI\n",
-    "from sj_ai_utils.l_hotse.util import load_data"
+    "from sj_ai_utils.datasets.l_hotse import AMI"
    ]
   },
   {
@@ -49,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_set = ami.load_dev_ihm()"
+    "dev_set = ami.load_dev_ihm(task=(\"asr\", \"diarization\"))"
    ]
   },
   {
@@ -60,16 +59,12 @@
    "outputs": [],
    "source": [
     "idx = 0\n",
-    "key_set = set()\n",
     "id_set = set()\n",
-    "for i, (audio, _id, y, key) in enumerate(load_data(dev_set, 16000)):\n",
+    "for i, sample in enumerate(dev_set):\n",
     "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate recording ID found: {_id}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    id_set.add(_id)\n",
-    "    key_set.add(key)\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
     "\n",
     "    if i == idx:\n",
     "        break"
@@ -78,11 +73,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57314568",
+   "id": "62284cfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y"
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09767aee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "261b20be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
    ]
   },
   {
@@ -92,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Audio(audio, rate=16000)"
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -112,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
