--- a/test/l_hotse/libri_speech.ipynb
+++ b/test/l_hotse/libri_speech.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.l_hotse import LibriSpeech\n",
-    "from sj_ai_utils.l_hotse.util import load_data"
+    "from sj_ai_utils.datasets.l_hotse import LibriSpeech"
    ]
   },
   {
@@ -49,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_set = libri_speech.load_dev_clean()"
+    "dev_set = libri_speech.load_dev_clean(task=[\"asr\", \"diarization\"])"
    ]
   },
   {
@@ -59,19 +58,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
-    "key_set = set()\n",
+    "idx = 12\n",
     "id_set = set()\n",
-    "for i, (audio, _id, y, key) in enumerate(load_data(dev_set, 16000)):\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate recording ID found: {_id}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    id_set.add(_id)\n",
-    "    key_set.add(key)\n",
+    "for i, sample in enumerate(dev_set):\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
     "\n",
     "    if i == idx:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11828ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9046f8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
    ]
   },
   {
@@ -81,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y"
+    "sample.Y[\"asr\"]"
    ]
   },
   {
@@ -91,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Audio(audio, rate=16000)"
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -111,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
