--- a/test/l_hotse/vox_populi.ipynb
+++ b/test/l_hotse/vox_populi.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.l_hotse import VoxPopuli\n",
-    "from sj_ai_utils.l_hotse.util import load_data"
+    "from sj_ai_utils.datasets.l_hotse import VoxPopuli"
    ]
   },
   {
@@ -49,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_set = vox_populi.load_dev_asr_en()"
+    "dev_set = vox_populi.load_dev_asr_en(task=(\"asr\", \"diarization\"))"
    ]
   },
   {
@@ -59,17 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
-    "key_set = set()\n",
+    "idx = 1\n",
     "id_set = set()\n",
-    "for i, (audio, _id, y, key) in enumerate(load_data(dev_set, 16000)):\n",
+    "for i, sample in enumerate(dev_set):\n",
     "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate recording ID found: {_id}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    id_set.add(_id)\n",
-    "    key_set.add(key)\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
     "\n",
     "    if i == idx:\n",
     "        break"
@@ -78,21 +73,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b9a10eb",
+   "id": "2fd85354",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y"
+    "len(sample.audio) / 16000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17684367",
+   "id": "b37442e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Audio(audio, rate=16000)"
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68555a07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0f4f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -112,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
