--- a/test/hugging_face/ksponspeech.ipynb
+++ b/test/hugging_face/ksponspeech.ipynb
@@ -63,51 +63,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f76daf",
+   "id": "021211cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(test), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ec1075",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf4d2552",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_id, audio, txt = test[index]\n",
-    "index += 1\n",
-    "print(_id, audio.shape, txt)\n",
-    "Audio(audio, rate=test.sample_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09e72e5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "idx = 1\n",
     "id_set = set()\n",
-    "for _id, audio, text in test:\n",
-    "    print(f\"{type(audio)} | {_id} | {text[:30]}\")\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {_id}\")"
+    "for i, sample in enumerate(test):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd5774e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29eb0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58decbe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -127,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
