--- a/test/hugging_face/vox_populi.ipynb
+++ b/test/hugging_face/vox_populi.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sj_ai_utils.hugging_face.vox_populi import VoxPopuli\n",
-    "from sj_ai_utils.hugging_face.vox_populi.service import load_data"
+    "from sj_ai_utils.datasets.hugging_face.vox_populi import VoxPopuli"
    ]
   },
   {
@@ -35,6 +34,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f91ae3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vox_populi.config_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760a95f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vox_populi.split_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "41f37d89",
    "metadata": {},
    "outputs": [],
@@ -45,32 +64,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "078cd236",
+   "id": "6845cc08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test[0]"
+    "idx = 2\n",
+    "id_set = set()\n",
+    "for i, sample in enumerate(test):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d6e228e",
+   "id": "481b4e93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_set = set()\n",
-    "key_set = set()\n",
-    "for audio, _id, y, key in load_data(test, 16000):\n",
-    "    print(f\"{type(audio)} | {_id} | {key} | {y[:30]}\")\n",
-    "    if key in key_set:\n",
-    "        raise ValueError(f\"Duplicate key found: {key}\")\n",
-    "    key_set.add(key)\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {key}\")"
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5f81fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b51333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a0e38fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -90,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
