--- a/test/hugging_face/zeroth_korean.ipynb
+++ b/test/hugging_face/zeroth_korean.ipynb
@@ -57,57 +57,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = zeroth_korean.test()"
+    "test = zeroth_korean.test(task=(\"asr\", \"diarization\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852db9a6",
+   "id": "8123aadc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(test), len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c03bf8c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3ccf406",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_id, audio, txt = test[index]\n",
-    "index += 1\n",
-    "print(_id, audio.shape, txt)\n",
-    "Audio(audio, rate=test.sample_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84aa86ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "idx = 101\n",
     "id_set = set()\n",
-    "for _id, audio, text in test:\n",
-    "    print(f\"{type(audio)} | {_id} | {text[:30]}\")\n",
-    "    if _id in id_set:\n",
-    "        raise ValueError(f\"Duplicate id found: {_id}\")\n",
-    "    id_set.add(_id)\n",
-    "    if len(_id) > 255:\n",
-    "        raise ValueError(f\"Key length exceeds 255 characters: {_id}\")"
+    "for i, sample in enumerate(test):\n",
+    "    # print(f\"{audio.shape}|{_id}|{key}|{y} \")\n",
+    "    if sample.id in id_set:\n",
+    "        raise ValueError(f\"Duplicate recording ID found: {sample.id}\")\n",
+    "    id_set.add(sample.id)\n",
+    "\n",
+    "    if i == idx:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e9b571d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sample.audio) / 16000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d606f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f466a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample.Y[\"asr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bea9051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(sample.audio, rate=16000)"
    ]
   }
  ],
@@ -127,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
