--- a/tests/scripts/hugging_face/zeroth_korean.ipynb
+++ b/tests/scripts/hugging_face/zeroth_korean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8c2fc269",
    "metadata": {},
    "outputs": [],
@@ -12,34 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f25f3ead",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/dev/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/workspaces/dev/modules/ai-utils/sj_ai_utils/datasets/hugging_face/__init__.py:3: UserWarning: [INFO] AMIDataset 오디오가 연속적이지 않고 세그먼트로 나눠져 있음\n",
-      "  from sj_ai_utils.datasets.hugging_face.ami import AMI\n",
-      "/workspaces/dev/modules/ai-utils/sj_ai_utils/datasets/hugging_face/__init__.py:4: UserWarning: [WARN] TedliumDataset 오디오가 연속적이지 않고 세그먼트로 나눠져 있음.\n",
-      "  from sj_ai_utils.datasets.hugging_face.tedlium import Tedlium\n",
-      "/workspaces/dev/modules/ai-utils/sj_ai_utils/datasets/hugging_face/__init__.py:7: UserWarning: [INFO] ZerothKorean 오디오가 연속적이지 않고 세그먼트로 나눠져 있음\n",
-      "  from sj_ai_utils.datasets.hugging_face.zeroth_korean import ZerothKorean\n",
-      "/workspaces/dev/modules/ai-utils/sj_ai_utils/datasets/hugging_face/__init__.py:8: UserWarning: [INFO] KSPonSpeechDataset 화자분리 데이터 없음, 오디오가 연속적이지 않고 세그먼트로 나눠져 있음\n",
-      "  from sj_ai_utils.datasets.hugging_face.ksponspeech import KSPonSpeech\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sj_ai_utils.datasets.hugging_face import ZerothKorean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e5aa8e0c",
    "metadata": {},
    "outputs": [],
@@ -49,98 +32,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "84805162",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since kresnik/zeroth_korean couldn't be found on the Hugging Face Hub\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['default']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "zeroth_korean.config_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "27d749d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since kresnik/zeroth_korean couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /root/.cache/huggingface/datasets/kresnik___zeroth_korean/default/0.0.0/1fe937899f828af822293d05e086200946088bdf (last modified on Thu Sep 18 08:02:12 2025).\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['train', 'test']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "zeroth_korean.split_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0e52aa06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since kresnik/zeroth_korean couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /root/.cache/huggingface/datasets/kresnik___zeroth_korean/default/0.0.0/1fe937899f828af822293d05e086200946088bdf (last modified on Thu Sep 18 08:02:12 2025).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = zeroth_korean.test(task=(\"asr\", \"diarization\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8123aadc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "idx = 101\n",
     "id_set = set()\n",
@@ -171,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+    "print(\"\\n\".join(str(s) for s in (sample.diarization[:3] + sample.diarization[-3:])))"
    ]
   },
   {
@@ -181,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.Y[\"asr\"]"
+    "sample.ASR"
    ]
   },
   {
@@ -197,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
