--- a/tests/scripts/datasets/esic.ipynb
+++ b/tests/scripts/datasets/esic.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.Y[\"asr\"]"
+    "sample.ASR"
    ]
   },
   {
@@ -103,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
