--- a/tests/scripts/hugging_face/ksponspeech.ipynb
+++ b/tests/scripts/hugging_face/ksponspeech.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.Y[\"asr\"]"
+    "sample.ASR"
    ]
   },
   {
@@ -112,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
