--- a/tests/scripts/hugging_face/vox_populi.ipynb
+++ b/tests/scripts/hugging_face/vox_populi.ipynb
@@ -123,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
