--- a/tests/scripts/l_hotse/libri_speech.ipynb
+++ b/tests/scripts/l_hotse/libri_speech.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+    "print(\"\\n\".join(str(s) for s in (sample.diarization[:3] + sample.diarization[-3:])))"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.Y[\"asr\"]"
+    "sample.ASR"
    ]
   },
   {
@@ -112,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
