--- a/tests/scripts/l_hotse/tedlium.ipynb
+++ b/tests/scripts/l_hotse/tedlium.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\".join(str(s) for s in (sample.Y['diarization'][:3] + sample.Y['diarization'][-3:])))"
+    "print(\"\\n\".join(str(s) for s in (sample.diarization[:3] + sample.diarization[-3:])))"
    ]
   },
   {
@@ -97,12 +97,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.Y[\"asr\"]"
+    "sample.ASR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "21652c39",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
